# bwm

./: CMakeLists.txt
src/: CMakeLists.txt  Decorator.cpp  Decorator.hpp  Frame.cpp  Frame.hpp  Pointer.cpp  Pointer.hpp  Rect.cpp  Rect.hpp  Utils.cpp  Utils.hpp  WindowManager.cpp  WindowManager.hpp  main.cpp
